manifests/prometheus/ocf-prometheus-kube-promet-alertmanager_Ingress_prometheus.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    ingress.kubernetes.io/force-ssl-redirect: 'true'
    kubernetes.io/tls-acme: 'true'
  labels:
    app: kube-prometheus-stack-alertmanager
    app.kubernetes.io/instance: ocf-prometheus
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kube-prometheus-stack
    app.kubernetes.io/version: 16.0.1
    chart: kube-prometheus-stack-16.0.1
    heritage: Helm
    release: ocf-prometheus
  name: ocf-prometheus-kube-promet-alertmanager
  namespace: prometheus
spec:
  rules:
  - host: alerts.ocf.berkeley.edu
    http:
      paths:
      - backend:
          service:
            name: ocf-prometheus-kube-promet-alertmanager
            port:
              number: 9093
        path: /
  tls:
  - hosts:
    - alerts.ocf.berkeley.edu
    secretName: alerts-tls
